--- a/Customer_Churn_Prediction.ipynb
+++ b/Customer_Churn_Prediction.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "**Date Completed**: \n",
     "\n",
-    "**Purpose** : Conducting exploratory data analysis and model building to predict whether a customer will decide leave an internet service. \n",
+    "**Purpose** : Conducting exploratory data analysis and model building to predict whether a customer will decide to leave an internet service. \n",
     "\n",
     "For the original dataset click, [here](https://www.kaggle.com/datasets/abdullah0a/telecom-customer-churn-insights-for-analysis/data).\n",
     "\n",
